--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^11.0.1",
-    "react": "^17.0.2",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^17.0.2",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.35.1",
     "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.13",
+    "@types/node": "18.11.18",
+    "@types/react": "^18.0.26",
     "typescript": "^4.3.5"
   }
 }
